<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Weather</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_setting">Setting</string>
    <string name="setting_gps">Use GPS</string>
    <string name="setting_city">CITY:</string>
    <string name="setting_state">STATE:</string>
    <string name="setting_zip">ZIP CODE:</string>
    <string name="setting_3day">SHOW 3 DAYS</string>
    <string name="setting_1day">SHOW 1 DAYS</string>
    <string name="setting_2day">SHOW 2 DAYS</string>
    <string name="setting_tems">Show temperature  as Celius</string>
    <string name="setting_temh">Show temperature as Fahrenhiet</string>
    <string name="setting_okbtn">Save as dafault setting</string>
    <string name="title_activity_test">MainActivity</string>
    <string name="downloading">DownLoading</string>
    <string name="currentlocation">CURRENT LOCATION:</string>
    <string name="action_goback">main screen</string>
    <string name="action_land">orientation</string>
    <string name="start">Start</string>
    <string name="startwithgps">Start with Default</string>


</resources>
